fix stretchy hero image

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -75,7 +75,7 @@ table {
 }
 
 .container {
-  max-width: 1460px;
+  max-width: 1493px;
   margin: auto;
 }
 
